--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
-    "target": "esnext",
+    "jsx": "react-jsx",
+    "target": "es6",
     "types": ["cypress"],
-    "module": "commonjs",
+    "module": "esnext",
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
